<?xml version="1.0" encoding="utf-8"?>
<resources>

	<!-- Application Navigation -->

	<string name="about_play">About Play!</string>
	<string name="about_play_emu">Play! PlayStation 2 Emulator</string>
	<string name="about_play_version">Version:</string>
	<string name="about_play_date">Date:</string>
	<string name="about_play_founder">Created by</string>

	<string name="main_menu_settings">Settings</string>
	<string name="main_menu_addfolder">Add Folder</string>
	<string name="main_menu_about">About</string>
	<string name="main_menu_exit">Exit</string>

	<string name="game_info">No info</string>

	<string name="search_games">Building collection&#8230;</string>
	<string name="search_games_msg">Please wait&#8230;</string>
	<string name="search_games_scanning">Scanning games&#8230;</string>
	<string name="search_games_scan_folders">Scanning added folders&#8230;</string>
	<string name="search_games_fetching_titles">Fetching game titles&#8230;</string>
	<string name="search_games_fetching">Fetching games&#8230;</string>
	<string name="search_games_populating">Populating images&#8230;</string>
	<string name="updating_db">Updating collection&#8230;</string>

	<string name="launch_game">Launching game&#8230;</string>
	<string name="launch_game_msg">Please wait&#8230;</string>

	<string name="navigation_drawer_open">Navigation drawer open</string>
	<string name="navigation_drawer_close">Navigation drawer closed</string>

	<string name="menu_title_open">Menu</string>
	<string name="menu_title_shut">Games</string>
	<string name="menu_title_look">Search</string>

	<string name="file_list_recent">Recent</string>
	<string name="file_list_homebrew">Homebrew</string>
	<string name="file_list_default">Unsorted</string>

	<string name="game_unavailable">Game is unavailable.\nWould you like to remove it from the list?</string>
	<string name="not_found">Not Found</string>
	<string name="no_game_found_adapter">No game found.\n\nPlease open the menu and select \'Add Folder\' to add games.</string>

	<!-- Application Preferences -->

	<string name="title_activity_settings">Settings</string>

	<string name="preferences_screen_emu">Emulator Settings</string>

	<string name="pref_emu_general">General Settings</string>

	<string name="pref_emu_general_fps_display_title">Show Frame and Draw Call Counters</string>
	<string name="pref_emu_general_fps_display_summary">Enables display of &quot;frames per second&quot; (f/s) and &quot;draw calls per frame&quot; (dc/f) statistics on screen</string>

	<string name="pref_emu_general_pad_display_title">Show Virtual Pad</string>
	<string name="pref_emu_general_pad_display_summary">Enables display of on-screen virtual controller pad</string>

	<string name="pref_emu_general_limit_frame_rate_title">Cap Frame Rate</string>
	<string name="pref_emu_general_limit_frame_rate_summary">Cap Frame Rate to Video Refresh Rate</string>

	<string name="pref_emu_video">Video Settings</string>

	<string name="pref_emu_video_gs_handler_title">GS Handler</string>

	<string name="pref_emu_video_res_factor_title">Set Resolution Factor</string>

	<string name="pref_emu_video_widescreen_title">Resize Output to Widescreen</string>
	<string name="pref_emu_video_widescreen_summary">Resizes video to 16:9 ratio</string>

	<string name="pref_emu_video_force_bilinear_title">Force Bilinear Filtering</string>
	<string name="pref_emu_video_force_bilinear_summary">Forces usage of bilinear filtering on all textures</string>

	<string name="pref_emu_video_presentation_mode_title">Presentation Mode</string>

	<string name="pref_emu_audio">Audio Settings</string>

	<string name="pref_emu_audio_enable_output_title">Enable Audio Output</string>
	<string name="pref_emu_audio_enable_output_summary">Enables audio output</string>

	<string name="pref_emu_audio_spublockcount_title">Buffer Size</string>

	<string name="preferences_screen_ui">UI Settings</string>

	<string name="preferences_ui">Storage Options</string>

	<string name="pref_ui_rescan_all_title">Rescan Storage</string>
	<string name="pref_ui_rescan_all_summary">Scan storage for new games</string>

	<string name="pref_ui_clear_unavailable_title">Clear Unavailable Games</string>
	<string name="pref_ui_clear_unavailable_summary">Remove any game currently inaccessible from the game list</string>

	<string name="pref_ui_reset_cache_title">Reset Cache</string>
	<string name="pref_ui_reset_cache_summary">Clear stored cover images</string>

	<string name="pref_ui_export_datafiles_title">Export Data Files</string>
	<string name="pref_ui_export_datafiles_summary">Export Data Files to a folder on the device</string>

	<string name="pref_ui_import_datafiles_title">Import Data Files</string>
	<string name="pref_ui_import_datafiles_summary">Import Data Files from a folder on the device</string>

	<string name="preferences_theme">Theme Settings</string>

	<string name="pref_title_theme_selection">Theme Selection</string>

	<string-array name="pref_theme_selection_titles">
		<item>Amber</item>
		<item>Blue (Default)</item>
		<item>Pink</item>
		<item>Purple</item>
		<item>Teal</item>
		<item>Dark Purple</item>
		<item>Green</item>
	</string-array>

	<string-array name="pref_emu_video_gs_handler_entries">
		<item>OpenGL</item>
		<item>Vulkan (Experimental)</item>
	</string-array>

	<string-array name="pref_emu_video_res_factor_entries">
		<item>1x</item>
		<item>2x</item>
		<item>4x</item>
		<item>8x</item>
	</string-array>

	<string-array name="pref_emu_video_presentation_mode_entries">
		<item>Fill Screen</item>
		<item>Fit Screen(Default)</item>
		<item>Original Size</item>
	</string-array>

	<string-array name="pref_emu_audio_spublockcount_entries">
		<item>400</item>
		<item>200</item>
		<item>100</item>
		<item>50</item>
		<item>10</item>
	</string-array>

	<!-- Emulator Drawer -->

	<string name="emulator_drawer_exit">Exit</string>
	<string name="emulator_drawer_savestate">Save State</string>
	<string name="emulator_drawer_loadstate">Load State</string>

	<string name="emulator_save_state_ok">State saved successfully.</string>
	<string name="emulator_save_state_fail">Couldn\'t save state.</string>

	<string name="emulator_load_state_ok">State loaded successfully.</string>
	<string name="emulator_load_state_fail">Couldn\'t load state.</string>

	<!-- Error Reporting / Debugging -->

	<string name="report_issue">Previous Crash Detected</string>

	<string name="dismiss">Dismiss</string>
	<string name="report">Report</string>

	<string name="platform">Copying logcat content to clipboard\nPlease paste in the issue report</string>
	<string name="log_saved">Log saved to \"Files Dir\" path</string>
	<string name="no_recent_adapter">No recently played PS2 game found.</string>

	<!-- Editor Menu -->
	<string name="editor_menu_save">Save</string>
	<string name="editor_menu_reset">Reset</string>
	<string name="editor_menu_cancel">Cancel</string>

	<!-- Game Info Edit Activity -->
	<string name="gameinfo_edit_activity_gametitle">Game Title</string>
	<string name="gameinfo_edit_activity_gameoverview">Game Overview</string>
	<string name="gameinfo_edit_activity_gamecover">Game Cover</string>
	<string name="gameinfo_edit_activity_gamecover_change">Change</string>
	<string name="gameinfo_edit_activity_gamecover_default">Default</string>

	<string name="permission_dialog_title">Permission Request</string>
	<string name="permission_dialog_summary">Play! needs storage access (read/write). Without it, Play! won\'t be able to find your games or save your progress.</string>

	<!-- Data Files Import/Export -->
	<string name="datafiles_export_title">Data Files Export</string>
	<string name="datafiles_import_title">Data Files Import</string>
	<string name="datafiles_export_complete">Data Files export complete</string>
	<string name="datafiles_import_complete">Data Files import complete</string>
	<string name="datafiles_export_selectfolder">Please select the destination folder where Data Files will be exported to.</string>
	<string name="datafiles_import_selectfolder">Please select the source folder where Data Files will be imported from.</string>
	<string name="datafiles_impexp_task_msg">Please wait&#8230;</string>
</resources>
